  which are treated as ObjectFactory specs, allowing for services to
  be injected. Additionally, the distinction between values that allow
  per-page overrides and those that do not was removed - all actions
  can now be overridden on a per-page basis using
  WikiPage::getActionOverrides().
* $wgShellboxUrl is deprecated, use $wgShellboxUrls as a mapping of
  service => URL instead.
* …

==== Removed configuration ====
* $wgLegacyJavaScriptGlobals, deprecated in 1.36.
* $wgShowDBErrorBacktrace, deprecated and non-functional since 1.32.
* $wgShowSQLErrors, deprecated and non-functional since 1.32.
* $wgLangObjCacheSize - The LanguageFactory service now always retains
  at most 10 objects in its LRU-cache.

=== New user-facing features in 1.37 ===
* (T161934) MediaWiki now supports JPEG2000 files, to a limited extent.
* Media files uploaded server side using the importImages.php maintenance
  script now have the "mw-server-side-upload" change tag.
* …

=== New developer features in 1.37 ===
* …

=== External library changes in 1.37 ===
* …

==== New external libraries ====
* Added whatwg-fetch 3.6.2.
* Added wikimedia/normalized-exception 1.0.1.
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated OOjs from v5.0.0 to v6.0.0
* Updated OOUI from v0.41.3 to v0.42.0
* Updated WVUI from v0.1.0 to v0.3.0
* Updated cssjanus/cssjanus from v1.3.0 to v2.0.0.
* Updated psr/container from v1.0.0 to v1.1.1.
* Updated wikimedia/minify from v2.2.2 to v2.2.4.
* Updated wikimedia/object-factory from v3.0.0 to v3.0.2.
* Updated wikimedia/parsoid from v0.13.0-a20 to v0.14.0-a1.
* Updated wikimedia/relpath from v2.1.1 to v3.0.0.
* Updated wikimedia/remex-html from v2.3.1 to v2.3.2.
* Updated wikimedia/shellbox from v1.0.4 to v2.0.0.
* Updated wikimedia/wait-condition-loop from v2.0.1 to v2.0.2.
* …

===== Changed development-only external libraries =====
* Updated qunit from 2.10.0 to 2.16.0.
* …
